[package]
name = "emporion-core"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = "2.1.0"
cosmwasm-std = "1.5.0"
cw-asset = "3.1.1"
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
cw2 = "1.1.2"
cw20 = "1.1.2"
fraction = "0.15.3"
schemars = "0.8.21"
serde = "1.0.204"
thiserror = "1.0.63"

[dev-dependencies]
cw-multi-test = "1.2.0"
cw20-base = { version = "1.1.2", features = ["library"] }
cargo-tarpaulin = "0.31.0"

