[package]
name = "emporion-voting-module"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = "2.1.0"
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
schemars = "0.8.21"
serde = "1.0.204"
thiserror = "1.0.63"

[dev-dependencies]
cw-multi-test = "1.2.0"
cw20-base = { version = "1.1.2", features = ["library"] }
cargo-tarpaulin = "0.31.0"

